fix: nav overlap

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,4 +1,4 @@
-nav {
+.in-game-nav {
   width: 100%;
   background: rgb(255, 255, 255);
   border-top: solid 1px rgb(214, 214, 214);
